Bug 469441 - movies from KinoPoisk.ru are not added
Summary: movies from KinoPoisk.ru are not added
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.4.6
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on: 447435
Blocks:
  Show dependency treegraph
 
Reported: 2023-05-07 11:01 UTC by xhwvy
Modified: 2023-05-08 01:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description xhwvy 2023-05-07 11:01:37 UTC
+++ This bug was initially created as a clone of Bug #447435 +++


SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

exactly as Bug #447435

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
SUMMARY
movies from KinoPoisk.ru are not added. See atachment.

STEPS TO REPRODUCE
1. building a new movie collection;
2. add entry --> internet search;
3. In the search bar enter the name of the movie, choose KinoPoisk.ru as the source;
4. click on the found movie and nothing happens (no information about the movie is loaded)

OBSERVED RESULT
nothing - no information about the movie is loaded

EXPECTED RESULT
downloaded information about the movie and adding it to the collection

SOFTWARE/OS VERSIONS
OS: Manjaro 21.2.0 Qonos
Kernel: x86_64 Linux 5.10.84-1-MANJARO
DE: KDE 5.88.0 / Plasma 5.23.4

ADDITIONAL INFORMATION
from other sources, movies are added.

LOG from terminal:
No JSON data
...trying Linked Data
No JSON data
No discernible entry data
no entry or collection pointer
Comment 1 Robby Stephenson 2023-05-08 01:28:37 UTC
Git commit d0e104e7477ace4909dfad98ec6350a7df69ca2c by Robby Stephenson.
Committed on 08/05/2023 at 01:28.
Pushed by rstephenson into branch 'master'.

Detect CAPTCHA or script within KinoPoisk results better
FIXED-IN: 3.5

M  +4    -0    ChangeLog
M  +2    -2    src/fetch/kinopoiskfetcher.cpp

https://invent.kde.org/office/tellico/commit/d0e104e7477ace4909dfad98ec6350a7df69ca2c