Detect CAPTCHA or script within KinoPoisk results better

BUG: 469441
FIXED-IN: 3.5